// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field component Creates a number field 1`] = `
<div
  className="components-base-control caldera-field caldera-field-number"
>
  <div
    className="components-base-control__field"
  >
    <span
      className="components-base-control__label"
    >
      Number Field Label
    </span>
    <input
      aria-describedby="undefined__help"
      className="components-text-control__input"
      id="numberFieldId"
      max={10}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      type="number"
      value={3}
    />
  </div>
  <p
    className="components-base-control__help"
    id="undefined__help"
  >
    Number field description
  </p>
</div>
`;

exports[`Field component Creates a text field 1`] = `
<div
  className="components-base-control caldera-field caldera-field-text"
>
  <div
    className="components-base-control__field"
  >
    <span
      className="components-base-control__label"
    >
      First Name
    </span>
    <input
      aria-describedby="undefined__help"
      className="components-text-control__input"
      id="firstName"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value="roy"
    />
  </div>
  <p
    className="components-base-control__help"
    id="undefined__help"
  >
    your first name
  </p>
</div>
`;

exports[`Field component Creates an checkbox field set 1`] = `
<fieldset
  className="caldera-fieldset caldera-fieldset-checkboxes"
>
  <legend>
    Checkbox Field Set Label
  </legend>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <input
        checked={true}
        className="components-checkbox-control__input"
        id="opt-1"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
      >
        One
      </label>
    </div>
  </div>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <input
        aria-describedby="undefined__help"
        checked={true}
        className="components-checkbox-control__input"
        id="opt-2"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
      >
        Two
      </label>
    </div>
    <p
      className="components-base-control__help"
      id="undefined__help"
    >
      The Second Option
    </p>
  </div>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <input
        checked={true}
        className="components-checkbox-control__input"
        id="opt-3"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
      >
        Three
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`Field component Creates an email field 1`] = `
<div
  className="components-base-control caldera-field caldera-field-email"
>
  <div
    className="components-base-control__field"
  >
    <span
      className="components-base-control__label"
    >
      Email Field Label
    </span>
    <input
      aria-describedby="undefined__help"
      className="components-text-control__input"
      id="emailFieldId"
      multiple={true}
      onBlur={[Function]}
      onChange={[Function]}
      type="email"
      value="emai@email.com"
    />
  </div>
  <p
    className="components-base-control__help"
    id="undefined__help"
  >
    Email field description
  </p>
</div>
`;

exports[`Field component Creates an select field 1`] = `
<div
  className="components-base-control caldera-field caldera-field-select"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="selectFieldId"
    >
      Select Field Label
    </label>
    <select
      aria-describedby="selectFieldId__help"
      className="components-select-control__input"
      id="selectFieldId"
      multiple={false}
      onChange={[Function]}
      value={1}
    >
      <option
        value={0}
      >
        Zero
      </option>
      <option
        value={1}
      >
        One
      </option>
      <option
        value={2}
      >
        Two
      </option>
    </select>
  </div>
  <p
    className="components-base-control__help"
    id="selectFieldId__help"
  >
    Select field description
  </p>
</div>
`;

exports[`Field component Creates an select field identified as dropdown 1`] = `
<div
  className="components-base-control caldera-field caldera-field-select"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="selectFieldId"
    >
      Select Field Label
    </label>
    <select
      aria-describedby="selectFieldId__help"
      className="components-select-control__input"
      id="selectFieldId"
      multiple={false}
      onChange={[Function]}
      value={1}
    >
      <option
        value={0}
      >
        Zero
      </option>
      <option
        value={1}
      >
        One
      </option>
      <option
        value={2}
      >
        Two
      </option>
    </select>
  </div>
  <p
    className="components-base-control__help"
    id="selectFieldId__help"
  >
    Select field description
  </p>
</div>
`;
